Closed
Bug 821679
Opened 13 years ago
Closed 13 years ago
Tab thumbnails that appear when moving tabs are not positioned correctly on high DPI displays
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: josh.tumath+bugzilla, Assigned: jfkthame)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0
Build ID: 20121213030751
Steps to reproduce:
1. Set layout.css.devPixelsPerPx to -1
2. Go to the Control Panel and set the DPI to 150%
3. Open at least two tabs
4. Use the mouse to drag the tab somewhere
Actual results:
The thumbnail that appears when dragging the tab is in the wrong position. It is not next to the cursor. This problem is more noticeable if the tabs are on the right side of the window.
| Assignee | ||
Updated•13 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•13 years ago
|
||
When creating the drag image, we need to convert the mouse coordinates from global display pixels to the context's device pixels for offsetting the drag image rect from the click position. The Mac HiDPI patches in bug 674373 did this in widget/cocoa/nsDragService.mm before calling DrawDrag. We could do a similar thing in widget/windows/nsDragService.cpp, but it seems more sensible to define the aScreenX/Y parameters of nsBaseDragService::DrawDrag as being display pixels, and handle the conversion to device pix there rather than duplicating it in each platform-specific file.
Attachment #692333 -
Flags: review?(roc)
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → jfkthame
| Assignee | ||
Comment 2•13 years ago
|
||
Tryserver build: http://ftp-scl3.mozilla.com/pub/mozilla.org/firefox/try-builds/jkew@mozilla.com-61c14d9b87c8/try-win32/ (note that it does -not- include the patch for bug 821454, so that problem will still be present).
Attachment #692333 -
Flags: review?(roc) → review+
| Reporter | ||
Comment 3•13 years ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #2)
> Tryserver build:
> http://ftp-scl3.mozilla.com/pub/mozilla.org/firefox/try-builds/jkew@mozilla.
> com-61c14d9b87c8/try-win32/ (note that it does -not- include the patch for
> bug 821454, so that problem will still be present).
Yeah, it works on my PC. :)
| Assignee | ||
Comment 4•13 years ago
|
||
Target Milestone: --- → mozilla20
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•