bug 821679 - handle display-to-device pixel scaling of mouse-click position when creating drag image. r=roc